gcc/testsuite/g++.dg/modules/p0713-3.C
// { dg-additional-options -fmodules-ts }

int k;
module frob; // { dg-error "expected" }
